# vanilla

./: README.md  package.json
config/: mergeFiles.toml
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs  merge_files.rs
