[package]
name = "merge-tool"
version = "0.1.0"
authors = ["Zacchary Dempsey-Plante <zacchary.dempseyplante@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "merge_tool"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
thiserror = "1.0"
toml = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
xml-rs = "0.8"
xmltree = "0.10"
#path-slash = "0.1.3"